# vrchatapi-rust

./: .gitignore  .openapi-generator-ignore  Cargo.toml  README.md  generate.sh  git_push.sh  openapi.json  openapitools.json  package-lock.json  package.json
.github/workflows/: check_pr.yaml  ci.yaml
.openapi-generator/: FILES
docs/: AccountDeletionLog.md  AddFavoriteRequest.md  AddGroupGalleryImageRequest.md  AdminAssetBundle.md  AdminUnityPackage.md  AgeVerificationStatus.md  Agreement.md  AgreementCode.md  AgreementRequest.md  AgreementStatus.md  ApiConfig.md  ApiConfigAccessLogsUrls.md  ApiConfigAnnouncement.md  ApiConfigAudioConfig.md  ApiConfigAvatarPerfLimiter.md  ApiConfigConstants.md  ApiConfigConstantsGroups.md  ApiConfigConstantsInstance.md  ApiConfigConstantsInstancePopulationBrackets.md  ApiConfigConstantsInstancePopulationBracketsCrowded.md  ApiConfigConstantsInstancePopulationBracketsFew.md  ApiConfigConstantsInstancePopulationBracketsMany.md  ApiConfigConstantsLanguage.md  ApiConfigDownloadUrlList.md  ApiConfigEvents.md  ApiConfigIosVersion.md  ApiConfigMinSupportedClientBuildNumber.md  ApiConfigOfflineAnalysis.md  ApiConfigReportCategories.md  ApiConfigReportOptions.md  ApiConfigReportOptionsAvatar.md  ApiConfigReportOptionsGroup.md  ApiConfigReportOptionsUser.md  ApiConfigReportOptionsWorld.md  ApiConfigReportReasons.md  ApiEventConfig.md  ApiHealth.md  AuthenticationApi.md  Avatar.md  AvatarModeration.md  (+370 more)
examples/: cookies_load.rs  cookies_store.rs  example.rs  online.rs
integration/: main.rs
patches/: 0001_fix_2fa.json  0001_fix_2fa.patch  2FA_Current_User.rs  2fa-reexport.rs  Cargo.toml  InviteMessageType-Display.rs  better_file_upload.rs  mod.rs
src/: lib.rs
src/apis/: authentication_api.rs  avatars_api.rs  calendar_api.rs  configuration.rs  economy_api.rs  favorites_api.rs  files_api.rs  friends_api.rs  groups_api.rs  instances_api.rs  inventory_api.rs  invite_api.rs  jams_api.rs  miscellaneous_api.rs  mod.rs  notifications_api.rs  permissions_api.rs  playermoderation_api.rs  prints_api.rs  props_api.rs  system_api.rs  users_api.rs  worlds_api.rs
src/models/: account_deletion_log.rs  add_favorite_request.rs  add_group_gallery_image_request.rs  admin_asset_bundle.rs  admin_unity_package.rs  age_verification_status.rs  agreement.rs  agreement_code.rs  agreement_request.rs  agreement_status.rs  api_config.rs  api_config_announcement.rs  (+378 more)
templates/: Cargo.mustache  api_doc.mustache  lib.mustache  model.mustache  partial_header.mustache
(+5 files in other folders)
