[package]
repository="https://github.com/vrchatapi/vrchatapi-rust"
name = "vrchatapi"
version = "1.20.8-nightly.9"
authors = ["vrchatapi.lpv0t@aries.fyi"]
description = "VRChat API Client for Rust"
license = "MIT"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
tokio = { version = "^1.46.0", features = ["fs"] }
tokio-util = { version = "^0.7", features = ["codec"] }
reqwest = { version = "^0.13", default-features = false, features = ["json", "multipart", "stream", "query", "form"] }
reqwest-middleware = { version = "^0.5", features = ["json", "multipart", "query", "form"] }

[features]
default = ["reqwest/cookies"]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls"]

[dev-dependencies]
tokio = { version = '1', features = ['macros', 'rt-multi-thread'] }